add scene : ui_research - gauge_research - GaugeNodeScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1059,6 +1059,9 @@
     <ClCompile Include="..\Classes\ui_research_gauge_research_SpriteScene.cpp">
       <Filter>src\scene\ui_research\gauge</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\ui_research_gauge_research_GaugeNodeScene.cpp">
+      <Filter>src\scene\ui_research\gauge</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1923,6 +1926,9 @@
       <Filter>src\scene\ui_research\gauge</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\ui_research_gauge_research_SpriteScene.h">
+      <Filter>src\scene\ui_research\gauge</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\ui_research_gauge_research_GaugeNodeScene.h">
       <Filter>src\scene\ui_research\gauge</Filter>
     </ClInclude>
   </ItemGroup>
