--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -415,6 +415,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\ui_research_button_research_team_fight_manager_OnMouseOverNode.cpp" />
     <ClCompile Include="..\Classes\ui_research_gauge_research_AnimationScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_gauge_research_BasicScene.cpp" />
+    <ClCompile Include="..\Classes\ui_research_gauge_research_GaugeNodeScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_gauge_research_RootScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_gauge_research_SpriteScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_RootScene.cpp" />
@@ -705,6 +706,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\ui_research_button_research_team_fight_manager_OnMouseOverNode.h" />
     <ClInclude Include="..\Classes\ui_research_gauge_research_AnimationScene.h" />
     <ClInclude Include="..\Classes\ui_research_gauge_research_BasicScene.h" />
+    <ClInclude Include="..\Classes\ui_research_gauge_research_GaugeNodeScene.h" />
     <ClInclude Include="..\Classes\ui_research_gauge_research_RootScene.h" />
     <ClInclude Include="..\Classes\ui_research_gauge_research_SpriteScene.h" />
     <ClInclude Include="..\Classes\ui_research_RootScene.h" />
