--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -175,6 +175,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\cpg_node_PivotNode.cpp" />
     <ClCompile Include="..\Classes\cpgui_research_layout_ToolBarNodeScene.cpp" />
     <ClCompile Include="..\Classes\cpg_ui_EXButtonNode.cpp" />
+    <ClCompile Include="..\Classes\cpg_ui_GaugeNode.cpp" />
     <ClCompile Include="..\Classes\cpg_ui_ScrollViewGenerator.cpp" />
     <ClCompile Include="..\Classes\cpg_ui_ToolBarNode.cpp" />
     <ClCompile Include="..\Classes\cpg_Direction4.cpp" />
@@ -453,6 +454,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\cpg_node_PivotNode.h" />
     <ClInclude Include="..\Classes\cpgui_research_layout_ToolBarNodeScene.h" />
     <ClInclude Include="..\Classes\cpg_ui_EXButtonNode.h" />
+    <ClInclude Include="..\Classes\cpg_ui_GaugeNode.h" />
     <ClInclude Include="..\Classes\cpg_ui_ScrollViewGenerator.h" />
     <ClInclude Include="..\Classes\cpg_ui_ToolBarNode.h" />
     <ClInclude Include="..\Classes\cpg_Clamp.h" />
