--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -407,6 +407,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\ui_practice_ToggleButtonScene.cpp" />
     <ClCompile Include="..\Classes\ui_practice_UIAndCamera.cpp" />
     <ClCompile Include="..\Classes\ui_practice_RootScene.cpp" />
+    <ClCompile Include="..\Classes\ui_research_button_research_ChargeButtonScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_button_research_EXButtonScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_button_research_MouseRightClickScene.cpp" />
     <ClCompile Include="..\Classes\ui_research_button_research_OnMouseOverScene.cpp" />
@@ -699,6 +700,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\ui_practice_ToggleButtonScene.h" />
     <ClInclude Include="..\Classes\ui_practice_UIAndCamera.h" />
     <ClInclude Include="..\Classes\ui_practice_RootScene.h" />
+    <ClInclude Include="..\Classes\ui_research_button_research_ChargeButtonScene.h" />
     <ClInclude Include="..\Classes\ui_research_button_research_EXButtonScene.h" />
     <ClInclude Include="..\Classes\ui_research_button_research_MouseRightClickScene.h" />
     <ClInclude Include="..\Classes\ui_research_button_research_OnMouseOverScene.h" />
