add class : cpg_ui - ChargeButtonNode

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -174,6 +174,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\cpg_SStream.cpp" />
     <ClCompile Include="..\Classes\cpg_node_PivotNode.cpp" />
     <ClCompile Include="..\Classes\cpgui_research_layout_ToolBarNodeScene.cpp" />
+    <ClCompile Include="..\Classes\cpg_ui_ChargeButtonNode.cpp" />
     <ClCompile Include="..\Classes\cpg_ui_EXButtonNode.cpp" />
     <ClCompile Include="..\Classes\cpg_ui_GaugeNode.cpp" />
     <ClCompile Include="..\Classes\cpg_ui_ScrollViewGenerator.cpp" />
@@ -454,6 +455,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\cpg_SStream.h" />
     <ClInclude Include="..\Classes\cpg_node_PivotNode.h" />
     <ClInclude Include="..\Classes\cpgui_research_layout_ToolBarNodeScene.h" />
+    <ClInclude Include="..\Classes\cpg_ui_ChargeButtonNode.h" />
     <ClInclude Include="..\Classes\cpg_ui_EXButtonNode.h" />
     <ClInclude Include="..\Classes\cpg_ui_GaugeNode.h" />
     <ClInclude Include="..\Classes\cpg_ui_ScrollViewGenerator.h" />
