--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1068,6 +1068,9 @@
     <ClCompile Include="..\Classes\ui_research_button_research_ChargeButtonScene.cpp">
       <Filter>src\scene\ui_research\button</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\cpg_ui_ChargeButtonNode.cpp">
+      <Filter>src\cpg_ui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1942,6 +1945,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\ui_research_button_research_ChargeButtonScene.h">
       <Filter>src\scene\ui_research\button</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\cpg_ui_ChargeButtonNode.h">
+      <Filter>src\cpg_ui</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
