--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -205,6 +205,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\input_practice_GamePadTestScene.cpp" />
     <ClCompile Include="..\Classes\input_practice_RootScene.cpp" />
     <ClCompile Include="..\Classes\shader_practice_BasicScene.cpp" />
+    <ClCompile Include="..\Classes\shader_practice_CCTimeScene.cpp" />
     <ClCompile Include="..\Classes\shader_practice_GLUniformInfos.cpp" />
     <ClCompile Include="..\Classes\shader_practice_GLUniformInfosScene.cpp" />
     <ClCompile Include="..\Classes\shader_practice_RootScene.cpp" />
@@ -491,6 +492,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\input_practice_GamePadTestScene.h" />
     <ClInclude Include="..\Classes\input_practice_RootScene.h" />
     <ClInclude Include="..\Classes\shader_practice_BasicScene.h" />
+    <ClInclude Include="..\Classes\shader_practice_CCTimeScene.h" />
     <ClInclude Include="..\Classes\shader_practice_GLUniformInfos.h" />
     <ClInclude Include="..\Classes\shader_practice_GLUniformInfosScene.h" />
     <ClInclude Include="..\Classes\shader_practice_RootScene.h" />
