--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1074,6 +1074,9 @@
     <ClCompile Include="..\Classes\shader_practice_CCTimeScene.cpp">
       <Filter>src\scene\shader_practice</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\shader_practice_CCRandom01Scene.cpp">
+      <Filter>src\scene\shader_practice</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1953,6 +1956,9 @@
       <Filter>src\cpg_ui</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\shader_practice_CCTimeScene.h">
+      <Filter>src\scene\shader_practice</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\shader_practice_CCRandom01Scene.h">
       <Filter>src\scene\shader_practice</Filter>
     </ClInclude>
   </ItemGroup>
