--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1071,10 +1071,10 @@
     <ClCompile Include="..\Classes\ui_research_layout_research_ToolBarNodeScene.cpp">
       <Filter>src\scene\ui_research</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\cpg_Input_KeyMap.cpp">
+    <ClCompile Include="..\Classes\cpg_input_Delegator.cpp">
       <Filter>src\input</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\cpg_input_Delegator.cpp">
+    <ClCompile Include="..\Classes\cpg_input_KeyMap.cpp">
       <Filter>src\input</Filter>
     </ClCompile>
   </ItemGroup>
@@ -1955,10 +1955,10 @@
     <ClInclude Include="..\Classes\ui_research_layout_research_ToolBarNodeScene.h">
       <Filter>src\scene\ui_research</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\cpg_Input_KeyMap.h">
+    <ClInclude Include="..\Classes\cpg_input_Delegator.h">
       <Filter>src\input</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\cpg_input_Delegator.h">
+    <ClInclude Include="..\Classes\cpg_input_KeyMap.h">
       <Filter>src\input</Filter>
     </ClInclude>
   </ItemGroup>
