add scene : algorithm_practice_astar - RootScene

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1077,6 +1077,9 @@
     <ClCompile Include="..\Classes\cpg_input_BasicKeyCollector.cpp">
       <Filter>src\input</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\algorithm_practice_astar_RootScene.cpp">
+      <Filter>src\scene\algorithm_practice\astar</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1960,6 +1963,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\cpg_input_BasicKeyCollector.h">
       <Filter>src\input</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\algorithm_practice_astar_RootScene.h">
+      <Filter>src\scene\algorithm_practice\astar</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
