--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -1083,6 +1083,9 @@
     <ClCompile Include="..\Classes\algorithm_practice_astar_CostNodeScene.cpp">
       <Filter>src\scene\algorithm_practice\astar</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\cpg_node_GuideRectNode.cpp">
+      <Filter>src\cpg_node</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -1972,6 +1975,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\algorithm_practice_astar_CostNodeScene.h">
       <Filter>src\scene\algorithm_practice\astar</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\cpg_node_GuideRectNode.h">
+      <Filter>src\cpg_node</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
